feat: add support for backing up Windows partitions as raw

--- a/config_example/windows_parts.cfg
+++ b/config_example/windows_parts.cfg
@@ -1,2 +1,3 @@
-SSD /dev/disk/by-uuid/...
-HDD /dev/disk/by-uuid/...
+SSD_EFI /dev/disk/by-uuid/... 1
+SSD_NTFS /dev/disk/by-uuid/... 0
+HDD_NTFS /dev/disk/by-uuid/... 0
