--- a/linux.yaml
+++ b/linux.yaml
@@ -36,6 +36,7 @@ location:
         # Note: only "- pf:___" between encrypt markers
         # (no quotes, no comments, no other pattern style selectors, no empty lines)
         # __ENCRYPT_START__
+        - pf:/home/t/.2fa
         - pf:/home/t/.docker
         - pf:/home/t/.git-credentials
         - pf:/home/t/.gnupg
@@ -44,7 +45,7 @@ location:
         - pf:/home/t/.pki
         - pf:/home/t/***REMOVED***
         - pf:/home/t/.remmina
-        - pf:/home/t/.ssh/id_rsa
+        - pf:/home/t/.ssh
         - pf:/etc/ssh
         # __ENCRYPT_END__
         - pf:/etc/borgmatic.d/config/passphrase
