feat: backup full NTFS partitions

--- a/config_example/windows_parts.cfg
+++ b/config_example/windows_parts.cfg
@@ -1,3 +1,3 @@
-SSD_EFI /dev/disk/by-uuid/... 1
-SSD_NTFS /dev/disk/by-uuid/... 0
-HDD_NTFS /dev/disk/by-uuid/... 0
+SSD_EFI /dev/disk/by-partuuid/...
+SSD_NTFS /dev/disk/by-partuuid/...
+HDD_NTFS /dev/disk/by-partuuid/...
