chore: dehardcode user

--- a/shared/storage.yaml
+++ b/shared/storage.yaml
@@ -2,7 +2,7 @@ compression: zstd,1
 
 # Use HPN SSH and add some options...
 #     ssh_command: hpnssh -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes
-# ...as user t...
-#     ssh_command: su -c "hpnssh -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes" t
+# ...as non-root user...
+#     ssh_command: su -c "hpnssh -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes" $USER
 # ...and note that Borg appends parameters to the command:
-ssh_command: su -s /usr/local/bin/hpnssh t -- -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes
+ssh_command: su -s /usr/local/bin/hpnssh $USER -- -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes
