chore: add more excludes

--- a/windows.yaml
+++ b/windows.yaml
@@ -19,6 +19,10 @@ location:
         - sh:/mnt/borg_windows/*/Temp
         - sh:/mnt/borg_windows/*/pagefile.sys
         - sh:/mnt/borg_windows/*/hiberfil.sys
+        - sh:/mnt/borg_windows/*/Users/*/AppData/Local/Google/Chrome/User Data/*/*Cache
+        - sh:/mnt/borg_windows/*/Users/*/AppData/Local/Mozilla/Firefox/Profiles/                    # only caches in LocalAppData
+        - sh:/mnt/borg_windows/*/Users/*/AppData/Local/Moonchild Productions/Pale Moon/Profiles/
+        - sh:/mnt/borg_windows/*/Users/*/AppData/Roaming/Telegram Desktop/tdata/*/*cache*
 
     exclude_from:
         - /mnt/borg_windows/excludes.txt
