--- a/config_example/linux_excludes.yaml
+++ b/config_example/linux_excludes.yaml
@@ -7,10 +7,22 @@
 - pf:/sys
 - pf:/tmp
 
+- sh:/home/*/.android/build-cache
+- sh:/home/*/.ansible/tmp
 - sh:/home/*/.cache
+- sh:/home/*/.cinnamon/spices.cache
+- sh:/home/*/.config/*/*Cache*  # crappy Electron apps
+- sh:/home/*/.config/chromium/*/GPUCache
+- sh:/home/*/.config/chromium/*/Service Worker/CacheStorage
+- sh:/home/*/.gradle/caches
 - sh:/home/*/.gvfs
 - sh:/home/*/.ICEauthority
+- sh:/home/*/.local/share/virtualenvs
+- sh:/home/*/.mozilla/firefox/Crash Reports
+- sh:/home/*/.mozilla/firefox/*/datareporting
+- sh:/home/*/.npm/_cacache
 - sh:/home/*/.nv
+- sh:/home/*/.var/app/org.telegram.desktop/data/TelegramDesktop/tdata/*/*cache*
 - sh:/home/*/.Xauthority
 - pf:/root/.cache
 - pf:/root/.gnupg
