chore: change passphrase config file name

--- a/shared/storage.yaml
+++ b/shared/storage.yaml
@@ -1,4 +1,4 @@
-<<: !include /etc/borgmatic.d/config/storage_passphrase.yaml
+<<: !include /etc/borgmatic.d/config/passphrase.yaml
 
 compression: zstd,1
 
