--- a/linux.yaml
+++ b/linux.yaml
@@ -14,6 +14,7 @@ location:
         - pf:/mnt
         - pf:/proc
         - pf:/run
+        - pf:/swapfile
         - pf:/sys
         - pf:/tmp
 
