--- a/config_example/windows_parts.cfg
+++ b/config_example/windows_parts.cfg
@@ -1,3 +1,4 @@
+SSD_MSRSVD /dev/disk/by-partuuid/... 1
 SSD_EFI /dev/disk/by-partuuid/... 1
 SSD_NTFS /dev/disk/by-partuuid/... 0
 HDD_NTFS /dev/disk/by-partuuid/... 0
