feat: backup with lvm snapshot

--- a/linux.yaml
+++ b/linux.yaml
@@ -1,6 +1,6 @@
 location:
     source_directories:
-        - /
+        - /mnt/borg_lvm
     read_special: false
     one_file_system: true
 
@@ -8,43 +8,42 @@ location:
         !include /etc/borgmatic.d/shared/repo.yaml
 
     exclude_patterns:
-        - pf:/cdrom
-        - pf:/dev
-        - pf:/media
-        - pf:/mnt
-        - pf:/proc
-        - pf:/run
-        - pf:/swapfile
-        - pf:/sys
-        - pf:/tmp
+        - pf:/mnt/borg_lvm/cdrom
+        - pf:/mnt/borg_lvm/dev
+        - pf:/mnt/borg_lvm/media
+        - pf:/mnt/borg_lvm/mnt
+        - pf:/mnt/borg_lvm/proc
+        - pf:/mnt/borg_lvm/run
+        - pf:/mnt/borg_lvm/swapfile
+        - pf:/mnt/borg_lvm/sys
+        - pf:/mnt/borg_lvm/tmp
 
-        - sh:/home/*/.android/build-cache
-        - sh:/home/*/.ansible/tmp
-        - sh:/home/*/.cache
-        - sh:/home/*/.cinnamon/spices.cache
-        - sh:/home/*/.config/*/*Cache*  # crappy Electron apps
-        - sh:/home/*/.config/chromium/*/GPUCache
-        - sh:/home/*/.config/chromium/*/Service Worker/CacheStorage
-        - sh:/home/*/.gradle/caches
-        - sh:/home/*/.gvfs
-        - sh:/home/*/.ICEauthority
-        - sh:/home/*/.local/share/virtualenvs
-        - sh:/home/*/.mozilla/firefox/Crash Reports
-        - sh:/home/*/.mozilla/firefox/*/datareporting
-        - sh:/home/*/.npm/_cacache
-        - sh:/home/*/.nv
-        - sh:/home/*/.var/app/org.telegram.desktop/data/TelegramDesktop/tdata/*/*cache*
-        - sh:/home/*/.Xauthority
-        - pf:/root/.cache
+        - sh:/mnt/borg_lvm/home/*/.android/build-cache
+        - sh:/mnt/borg_lvm/home/*/.ansible/tmp
+        - sh:/mnt/borg_lvm/home/*/.cache
+        - sh:/mnt/borg_lvm/home/*/.cinnamon/spices.cache
+        - sh:/mnt/borg_lvm/home/*/.config/*/*Cache*  # crappy Electron apps
+        - sh:/mnt/borg_lvm/home/*/.config/chromium/*/GPUCache
+        - sh:/mnt/borg_lvm/home/*/.config/chromium/*/Service Worker/CacheStorage
+        - sh:/mnt/borg_lvm/home/*/.gradle/caches
+        - sh:/mnt/borg_lvm/home/*/.gvfs
+        - sh:/mnt/borg_lvm/home/*/.ICEauthority
+        - sh:/mnt/borg_lvm/home/*/.local/share/virtualenvs
+        - sh:/mnt/borg_lvm/home/*/.mozilla/firefox/Crash Reports
+        - sh:/mnt/borg_lvm/home/*/.mozilla/firefox/*/datareporting
+        - sh:/mnt/borg_lvm/home/*/.npm/_cacache
+        - sh:/mnt/borg_lvm/home/*/.nv
+        - sh:/mnt/borg_lvm/home/*/.var/app/org.telegram.desktop/data/TelegramDesktop/tdata/*/*cache*
+        - sh:/mnt/borg_lvm/home/*/.Xauthority
+        - pf:/mnt/borg_lvm/root/.cache
 
-        - pf:/var/cache/apt
-        - pf:/var/lock
-        - pf:/var/run
-        - pf:/var/tmp
+        - pf:/mnt/borg_lvm/var/cache/apt
+        - pf:/mnt/borg_lvm/var/lock
+        - pf:/mnt/borg_lvm/var/run
+        - pf:/mnt/borg_lvm/var/tmp
 
         - '*/node_modules/'
         - '*.pyc'
-
 
 
 storage:
@@ -58,11 +57,12 @@ retention:
 hooks:
     before_backup:
         - bash -c "(( EUID == 0 ))" || (echo 'Use `sudo`'; exit 1)
-
-        # Ensure desktop environment is not running (to run safely without snapshot)
-        - '! systemctl is-active --quiet lightdm'
+        - /etc/borgmatic.d/linux_hooks.sh setup
 
     after_backup:
+        - /etc/borgmatic.d/linux_hooks.sh cleanup
         - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
+
+    umask: 0077
 
     # TODO: https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#healthchecks-hook
