--- a/config_example/parts_storage.yaml
+++ b/config_example/parts_storage.yaml
@@ -1,2 +1,2 @@
-archive_name_format: TAM_2009-windows-{now}
+archive_name_format: TAM_2009-parts-{now}
 <<: !include /etc/borgmatic.d/shared/storage.yaml
