fix: prevent using separate config and cache

--- a/01_parts.yaml
+++ b/01_parts.yaml
@@ -47,7 +47,9 @@ hooks:
 
     after_backup:
         - /etc/borgmatic.d/parts_hooks.sh cleanup
-        - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
+        # Ensure correct paths were used and fix ownership:
+        # TODO
+        # - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
 
     umask: 0077
 
