--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -64,7 +64,7 @@ hooks:
 
     after_backup:
         - /etc/borgmatic.d/linux_hooks.sh cleanup
-        - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
+        # - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
 
     umask: 0077
 
