--- a/config_example/linux_storage.yaml
+++ b/config_example/linux_storage.yaml
@@ -1,2 +1,2 @@
 archive_name_format: TAM_2009-mint-{now}
-<<: !include /etc/borgmatic.d/shared/storage.yaml
+<<: !include /etc/borgmatic.d/shared/shared_storage.yaml
