--- a/01_parts.yaml
+++ b/01_parts.yaml
@@ -47,7 +47,7 @@ hooks:
 
     after_backup:
         - /etc/borgmatic.d/parts_hooks.sh cleanup
-        - "chown -R $SUDO_USER: ~/.config/borg/ ~/.cache/borg/"
+        - 'chown -R "$SUDO_USER:$SUDO_USER" /home/"$SUDO_USER"/.config/borg/ /home/"$SUDO_USER"/.cache/borg/'
 
     umask: 0077
 
