--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -5,6 +5,7 @@ location:
     read_special: false
     one_file_system: true
     exclude_caches: true
+    keep_exclude_tags: true
 
     repositories:
         !include /etc/borgmatic.d/shared/repo.yaml
