feat: exclude Android Studio stuff

--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -48,6 +48,13 @@ location:
 
         - '*.pyc'
         # '*/node_modules/' not excluded, as not all of them were created with "npm install"
+        - '*/.gradle/'
+        # Attempt to exclude Android Studio build/ but nothing else:
+        - '*/app/build/intermediates/'
+        - '*/app/build/outputs/'
+        - '*/app/build/kotlin/'
+        - '*/app/build/tmp/'
+        - '*/app/build/generated/'
 
 
 storage:
