--- a/shared/shared_storage.yaml
+++ b/shared/shared_storage.yaml
@@ -3,7 +3,7 @@
 compression: zstd,1
 
 # Use HPN SSH with some options, as the user who ran sudo.
-# sh is required for variables to work.
-# SSH_AUTH_SOCK is required if identity_file has passphrase.
-# As Borg appends parameters to the command, and -c requires quotes, $@ is used. "0" fills $0.
+#   sh makes env vars work.
+#   SSH_AUTH_SOCK provides unlocked identity_file.
+#   As Borg appends parameters to the command, and -c requires quotes, $@ is used. "0" fills $0.
 ssh_command: sh -c 'sudo -u $SUDO_USER SSH_AUTH_SOCK="$SSH_AUTH_SOCK" /usr/local/bin/hpnssh -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes "$@"' 0
