--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -72,4 +72,5 @@ hooks:
     after_backup:
         - /etc/borgmatic.d/linux_hooks.sh after
 
+    # TODO: on error run /etc/borgmatic.d/pata_hooks.sh cleanup
     # TODO: https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#healthchecks-hook
