--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -6,6 +6,7 @@ location:
     one_file_system: true
     exclude_caches: true
     keep_exclude_tags: true
+    # TODO: numeric_ids: true
 
     repositories:
         !include /etc/borgmatic.d/shared/repo.yaml
