--- a/02_linux.yaml
+++ b/02_linux.yaml
@@ -73,4 +73,5 @@ hooks:
         - /etc/borgmatic.d/linux_hooks.sh after
 
     # TODO(upg): on error run /etc/borgmatic.d/pata_hooks.sh cleanup
-    # TODO: https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#healthchecks-hook
+
+    healthchecks: !include /etc/borgmatic.d/config/linux_healthchecks.yaml
