fix: healthchecks disable method

--- a/config_example/linux_healthchecks.yaml
+++ b/config_example/linux_healthchecks.yaml
@@ -1,2 +1,1 @@
-healthchecks: https://hc-ping.com/your-uuid-here
-# Set url, or comment line to disable
+healthchecks: https://hc-ping.com/your-uuid-here # or '' to disable
